--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timer App</title>
     <link rel="stylesheet" href="index.css">
+    <link
+  rel="icon"
+  type="image/png"
+  href="clockImg.png"
+  sizes="16x16"
+   />
+    <link
+  rel="icon"
+  type="image/png"
+  href="clockImg.png"
+  sizes="32x32"
+ />
 </head>
 <body>
       <div class="wrapper">
